<resources>
    <string name="app_name">amlee1-SizeBook</string>
    <string name="add_name">Name (mandatory)</string>
    <string name="add_date">Date since last accurate (yyyy-mm-dd)</string>
    <string name="add_neck">Neck (inches)</string>
    <string name="add_bust">Bust (inches)</string>
    <string name="add_chest">Chest (inches)</string>
    <string name="add_waist">Waist (inches)</string>
    <string name="add_hip">Hip (inches)</string>
    <string name="add_inseam">Inseam (inches)</string>
    <string name="add_comment">Comment</string>
    <string name="button_add">Add New Entry</string>
    <string name="button_quit">Quit</string>
    <string name="button_back">Back</string>
    <string name="button_confirm">Confirm</string>
</resources>
